Fixed letter spacing for word Space on home page

--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -16,6 +16,7 @@
         span {
             font-size: var(--title-huge-text);
             line-height: var(--title-huge-line-height);
+            letter-spacing: initial;
             font-family: var(--serif-font);
             color: var(--secondary-colour);
             display: block;
